--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3942,6 +3942,148 @@
       .header-contact__links a:hover:after {
         background-color: #BF9D77; }
 
+.nav__link.active {
+  color: #BF9D77; }
+  .nav__link.active span {
+    color: rgba(191, 157, 119, 0.5); }
+
+.nav-drop {
+  position: relative; }
+
+.nav-dropdown {
+  display: none;
+  position: absolute;
+  padding: 30px;
+  width: 380px;
+  top: calc(100% - 4px);
+  left: 0;
+  z-index: 1;
+  background-color: #fff;
+  border-top: 4px solid #BF9D77;
+  -webkit-box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1);
+  box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1); }
+  .nav-dropdown__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-left: -20px;
+    position: relative; }
+    .nav-dropdown__inner:after {
+      content: "";
+      width: 100%;
+      height: 3px;
+      background-color: #fff;
+      position: absolute;
+      bottom: 16px;
+      left: 20px;
+      z-index: 5; }
+    .nav-dropdown__inner > * {
+      margin-left: 20px;
+      width: calc(50% - 20px);
+      margin-bottom: 16px; }
+  .nav-dropdown__item {
+    display: block;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.5;
+    padding-bottom: 16px;
+    border-bottom: 1px solid #BF9D77;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear; }
+    .nav-dropdown__item:hover {
+      color: #983031;
+      border-color: #983031; }
+  .nav-dropdown .btn {
+    margin-top: 24px;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    min-width: 240px; }
+
+.mobile-menu__back {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  .mobile-menu__back a {
+    color: #BF9D77;
+    margin-left: 20px; }
+
+.mobile-menu__submenu {
+  background-color: #fff;
+  position: relative;
+  z-index: 10;
+  margin-top: -60px;
+  display: none; }
+  .mobile-menu__submenu a {
+    font-size: 16px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.5;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear; }
+    .mobile-menu__submenu a span {
+      font-size: 12px;
+      display: block; }
+    .mobile-menu__submenu a:hover {
+      color: #983031; }
+  .mobile-menu__submenu li:last-child {
+    padding-bottom: 0; }
+
+.mobile-menu__link-drop {
+  display: block;
+  position: relative;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  .mobile-menu__link-drop:before {
+    content: "";
+    width: 16px;
+    height: 16px;
+    background: url("../images/icons/arrow-left.svg");
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1; }
+  .mobile-menu__link-drop:after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: #ECE2D6;
+    position: absolute;
+    left: 0;
+    bottom: -20px;
+    z-index: 1; }
+
+.mobile-menu__nav {
+  padding: 0 !important; }
+
+.mobile-menu-top {
+  background-color: #fff;
+  padding: 20px 40px 20px; }
+
+.mobile-menu-bottom {
+  background-color: #F9F9F9;
+  padding: 20px 40px 20px; }
+
+.mobile-menu__contact {
+  background-color: #fff; }
+
+.mobile-menu .header-lang {
+  background: rgba(191, 157, 119, 0.2); }
+  .mobile-menu .header-lang span {
+    color: #BF9D77; }
+  .mobile-menu .header-lang:after {
+    background: url("../images/icons/chevron-bottom_brown.svg") center no-repeat; }
+  .mobile-menu .header-lang__dropdown {
+    background: rgba(191, 157, 119, 0.2); }
+    .mobile-menu .header-lang__dropdown a {
+      color: #BF9D77; }
+
 .work .title-box {
   margin-bottom: 50px; }
 
