--- a/assets/css/style-new.scss
+++ b/assets/css/style-new.scss
@@ -2,6 +2,10 @@
 	margin-bottom: 50px;
 }
 
+.p-block {
+	padding: 80px 0 90px;
+}
+
 .header-logo__title {
 	white-space: nowrap;
 	font-size: 29px;
@@ -234,6 +238,46 @@
 			a {
 				color: $lbrown;
 			}
+		}
+	}
+}
+
+.text-block {
+	&__more {
+		p {
+			margin-bottom: 20px;
+			&:last-child {
+				margin-bottom: 20px;
+			}
+		}
+	}
+	&__btn-more {
+		display: none;
+		position: relative;
+		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+		span {
+			display: inline-block;
+			font-family: $ff;
+			font-size: 16px;
+			font-weight: 400;
+			color: $red;
+			line-height: 1.5;
+			border-bottom: 1px dashed $red;
+		}
+	}
+	&__hide {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 1;
+		opacity: 0;
+		&.show {
+			opacity: 1;
+		}
+	}
+	&__show {
+		&.hide {
+			opacity: 0;
 		}
 	}
 }
@@ -713,6 +757,9 @@
 }
 
 @media(max-width: 992px) {
+	.p-block  {
+		padding: 70px 0;
+	}
 	.labor {
 		padding: 70px 0;
 		&__inner {
@@ -792,6 +839,10 @@
 
 
 @media(max-width: 546px) {
+	.p-block  {
+		padding: 40px 0;
+	}
+
 	.header-logo__title {
 		font-size: 16.5px;
 		span {
@@ -799,7 +850,15 @@
 				font-size: 16.5px!important;
 			}
 		}
-}
+	}
+	.text-block {
+		&__more {
+			display: none;
+		}
+		&__btn-more {
+			display: inline-block;
+		}
+	}
 	.labor {
 		padding: 40px 0 50px;
 		&__info {
