--- a/assets/css/style-new.scss
+++ b/assets/css/style-new.scss
@@ -101,7 +101,7 @@
 		width: 380px;
 		top: calc(100% - 4px);
 		left: 0;
-		z-index: 1;
+		z-index: 10;
 		background-color: $wh;
 		border-top: 4px solid #BF9D77;
 		box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1);
@@ -156,6 +156,9 @@
 			color: $lbrown;
 			margin-left: 20px;
 		}
+		img {
+			margin-top: 4px;
+		}
 	}
 	&__submenu {
 		background-color: $wh;
@@ -195,7 +198,7 @@
 				background: url("../images/icons/arrow-left.svg");
 				transform: rotate(180deg);
 				position: absolute;
-				top: 0;
+				top: 15px;
 				right: 0;
 				z-index: 1;
 			}
@@ -670,9 +673,6 @@
 
 /*===========Adaptive============*/
 @media(max-width: 1200px) {
-	.header-contact__links {
-		display: none;
-	}
 	.work {
 		&__inner {
 			display: block;
@@ -757,6 +757,12 @@
 }
 
 @media(max-width: 992px) {
+	.header-contact__links {
+		a {
+			font-size: 12px;
+			margin-right: 15px;
+		}
+	}
 	.p-block  {
 		padding: 70px 0;
 	}
