--- a/assets/css/pages.scss
+++ b/assets/css/pages.scss
@@ -1,9 +1,4 @@
 .page {
-	.header {
-		@media(max-width: 992px) {
-			box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1);
-		}
-	}
 	&_service-consult {
 		.services-box {
 			.title {
@@ -2018,18 +2013,6 @@
 	}
 }
 @media(max-width: 1200px) {
-	.page {
-		&_gray-foot {
-			.footer {
-				&__info {
-					background-color: $gray;
-					&:before {
-						background-color: $gray;
-					}
-				}
-			}
-		}
-	}
 	.address {
 		&-logo {
 			right: 15%;
@@ -2235,13 +2218,10 @@
 	}
 }
 @media(max-width: 860px) {
-	.page {
-		&_service-labor {
-			.services-box__nav {
-				display: none;
-			}
-		}
+	.services-box__nav.mobile-none {
+		display: none;/*fix*/
 	}
+
 	.block-p {
 		padding: 70px 0;
 	}
