--- a/assets/css/style-new.scss
+++ b/assets/css/style-new.scss
@@ -101,10 +101,19 @@
 		width: 250px;
 		top: calc(100% - 4px);
 		left: 0;
-		z-index: 10;
+		z-index: 50;
 		background-color: $wh;
 		border-top: 4px solid #BF9D77;
 		box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1);
+		&:before {
+			content: "";
+			width: 100%;
+			height: 60px;
+			position: absolute;
+			top: -60px;
+			left: 0;
+			z-index: 1;
+		}
 		&__inner {
 			display: flex;
 			flex-wrap: wrap;
@@ -240,14 +249,19 @@
 	}
 	&-top {
 		background-color: $wh;
-		padding: 20px 40px 20px;
+		padding: 20px 40px 0px;
 	}
 	&-bottom {
 		background-color: $gray;
-		padding: 20px 40px 20px;
+		padding: 0px 40px 0px;
 	}
 	&__contact {
 		background-color: $wh;
+	}
+	.header-contact__item {
+		br {
+			display: none;
+		}
 	}
 	.header-lang {
 		background: rgba(191, 157, 119, 0.2);
@@ -664,6 +678,15 @@
 /*===========View-btn===========*/
 .view-btn {
 	display: flex;
+	align-items: center;
+	&__description {
+		font-family: $ff;
+		font-size: 14px;
+		font-weight: 400;
+		color: $bl;
+		line-height: 1.3;
+		margin-right: 15px;
+	}
 	a {
 		width: 40px;
 		height: 40px;
@@ -696,59 +719,19 @@
 @media(max-width: 1200px) {
 	.work {
 		&__inner {
-			display: block;
-			margin-left: 0;
+			margin-left: -20;
+			margin-bottom: -40px;
+			flex-wrap: wrap;
 			>* {
-				margin-left: 0;
+				margin-left: 20px;
 			}
-		}
-		&__icon {
-			margin-bottom: 0;
-			margin-right: 30px;
-			img {
-				width: 50px;
-				height: 50px;
-			}
-
 		}
 		&__item {
-			display: flex;
-			align-items: center;
-			width: 100%;
+			flex: 0 0 auto;
+			width: calc(25% - 20px);
 			min-width: auto;
 			max-width: 100%;
-			margin-bottom: 20px;
-			&:last-child {
-				margin-bottom: 0;
-			}
-			&:first-child {
-				.work__info {
-					&:before {
-						background: url("../images/icons/work-arrow-down_first.svg") left top no-repeat;
-						background-size: contain;
-					}
-				}
-			}
-			&:last-child {
-				.work__info {
-					&:before {
-						background: url("../images/icons/work-arrow-down_last.svg") left top no-repeat;
-						background-size: contain;
-					}
-				}
-			}
-		}
-		&__info {
-			padding-top: 0;
-			padding-left: 30px;
-			&:before {
-				width: 10px;
-				height: 50px;
-				background: url("../images/icons/work-arrow-down.svg") left top no-repeat;
-				background-size: contain;
-				top: 50%;
-				transform: translateY(-50%);
-			}
+			margin-bottom: 40px;
 		}
 	}
 	.delivery {
@@ -820,6 +803,65 @@
 }
 
 @media(max-width: 768px) {
+	.work {
+		&__inner {
+			display: block;
+			margin-left: 0;
+			margin-bottom: 0;
+			>* {
+				margin-left: 0;
+			}
+		}
+		&__icon {
+			margin-bottom: 0;
+			margin-right: 30px;
+			img {
+				width: 50px;
+				height: 50px;
+			}
+
+		}
+		&__item {
+			display: flex;
+			align-items: center;
+			width: 100%;
+			min-width: auto;
+			max-width: 100%;
+			margin-bottom: 20px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+			&:first-child {
+				.work__info {
+					&:before {
+						background: url("../images/icons/work-arrow-down_first.svg") left top no-repeat;
+						background-size: contain;
+					}
+				}
+			}
+			&:last-child {
+				.work__info {
+					&:before {
+						background: url("../images/icons/work-arrow-down_last.svg") left top no-repeat;
+						background-size: contain;
+					}
+				}
+			}
+		}
+		&__info {
+			font-size: 20px;
+			padding-top: 0;
+			padding-left: 30px;
+			&:before {
+				width: 10px;
+				height: 50px;
+				background: url("../images/icons/work-arrow-down.svg") left top no-repeat;
+				background-size: contain;
+				top: 50%;
+				transform: translateY(-50%);
+			}
+		}
+	}
 	.delivery {
 		&__map {
 			transform: translate(-50%, -10%);
@@ -874,6 +916,25 @@
 @media(max-width: 546px) {
 	.p-block  {
 		padding: 40px 0;
+	}
+
+	.view-btn {
+		position: relative;
+		&__description {
+			font-size: 12px;
+			margin-right: 0;
+			position: absolute;
+			top: -3px;
+			left: 0;
+			z-index: 1;
+			transform: translateY(-100%);
+		}
+	}
+
+	.work {
+		&__info {
+			font-size: 16px;
+		}
 	}
 
 	.header-logo__title {
@@ -946,6 +1007,13 @@
 	.manufacture {
 		.title {
 			font-size: 24px;
+		}
+	}
+	.mobile-menu {
+		.header-contact__item {
+			br {
+				display: block;
+			}
 		}
 	}
 }
