--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,11 @@
   /*==/header-lang==*/
   /*==/header-logo==*/
   /*==/contact==*/ }
+  @media (max-width: 1200px) {
+    .header {
+      -webkit-box-shadow: 0px 20px 20px rgba(55, 32, 14, 0.05);
+      box-shadow: 0px 20px 20px rgba(55, 32, 14, 0.05);
+      /*fix*/ } }
   .header__menu {
     background-color: #2B323C;
     padding: 22px 0 20px; }
@@ -553,7 +558,8 @@
         border-bottom: none; }
   .mobile-menu__contact {
     background-color: #F9F9F9;
-    padding: 40px 40px 80px; }
+    padding: 20px 40px 130px;
+    /*fix*/ }
     .mobile-menu__contact .header-contact__item {
       margin-bottom: 10px; }
       .mobile-menu__contact .header-contact__item:last-child {
@@ -585,7 +591,17 @@
 /*========/mobile-menu======*/
 /*========Footer=======*/
 .footer {
-  background-color: #2B323C; }
+  background-color: #2B323C;
+  /*=fix=*/
+  /*=/fix=*/ }
+  .footer.footer-gray .footer__nav {
+    background-color: #fff; }
+    .footer.footer-gray .footer__nav:before {
+      background-color: #fff; }
+  .footer.footer-gray .footer__info {
+    background-color: #F9F9F9; }
+    .footer.footer-gray .footer__info:before {
+      background-color: #F9F9F9; }
   .footer .nav {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
@@ -605,7 +621,7 @@
     -ms-flex: 0 0 68px;
     flex: 0 0 68px; }
   .footer__nav {
-    background-color: #fff;
+    background-color: #F9F9F9;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -619,7 +635,7 @@
       content: "";
       width: 1000%;
       height: 100%;
-      background-color: #fff;
+      background-color: #F9F9F9;
       position: absolute;
       top: 0;
       left: 1px;
@@ -636,7 +652,8 @@
     display: flex; }
   .footer__info {
     padding: 100px 50px 95px 1px;
-    background-color: #F9F9F9;
+    background-color: #fff;
+    /*fix*/
     -webkit-box-flex: 0;
     -ms-flex: 0 0 325px;
     flex: 0 0 325px;
@@ -645,7 +662,8 @@
       content: "";
       width: 10000%;
       height: 100%;
-      background-color: #F9F9F9;
+      background-color: #fff;
+      /*fix*/
       position: absolute;
       top: 0;
       left: 1px;
@@ -846,11 +864,17 @@
 /*========Adaptive==========*/
 @media (max-width: 1600px) {
   .bg-line:after {
-    width: 5%; } }
+    width: 5%; }
+  .footer__nav {
+    margin-right: -60px;
+    /*fix*/ } }
 
 @media (max-width: 1400px) {
   .bg-line:after {
-    display: none; } }
+    display: none; }
+  .footer__nav {
+    margin-right: 0;
+    /*fix*/ } }
 
 @media (max-width: 1250px) {
   .stat {
@@ -878,39 +902,46 @@
       transform: translateX(0); }
   .nav__link:before {
     display: none; }
-  .footer__nav {
-    display: none; }
-  .footer__burger {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex; }
-  .footer__info {
-    background-color: #fff;
-    padding: 75px 42px 75px 1px; }
-    .footer__info:before {
+  .footer {
+    /*=fix=*/
+    /*=/fix=*/ }
+    .footer.footer-gray .footer__info {
       background-color: #fff; }
-  .footer__text {
-    margin-top: 30px; }
-  .footer-menu {
-    padding: 75px 0 75px 50px;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap; }
-    .footer-menu__col {
-      width: 100%;
-      margin-right: 0;
-      margin-bottom: 30px; }
-      .footer-menu__col:last-child {
-        margin-bottom: 0;
-        width: 100%; }
-  .footer-social {
-    margin-top: 30px; }
-  .footer__copyright {
-    margin-top: 30px; }
-  .footer__notification_right {
-    display: none; }
-  .footer__notification_left {
-    display: block;
-    margin-top: 85px; } }
+      .footer.footer-gray .footer__info:before {
+        background-color: #fff; }
+    .footer__nav {
+      display: none; }
+    .footer__burger {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+    .footer__info {
+      background-color: #F9F9F9;
+      padding: 75px 42px 75px 1px; }
+      .footer__info:before {
+        background-color: #F9F9F9; }
+    .footer__text {
+      margin-top: 30px; }
+    .footer-menu {
+      padding: 75px 0 75px 50px;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+      .footer-menu__col {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 30px; }
+        .footer-menu__col:last-child {
+          margin-bottom: 0;
+          width: 100%; }
+    .footer-social {
+      margin-top: 30px; }
+    .footer__copyright {
+      margin-top: 30px; }
+    .footer__notification_right {
+      display: none; }
+    .footer__notification_left {
+      display: block;
+      margin-top: 85px; } }
 
 @media (max-width: 992px) {
   .header-contact__phone {
@@ -991,7 +1022,8 @@
         font-size: 8.74px;
         letter-spacing: -0.5px; }
   .mobile-menu .header-contact__items {
-    display: block; }
+    display: block;
+    margin-right: 0; }
   .mobile-menu__social {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1029,6 +1061,16 @@
   .footer__link:first-child {
     margin-top: 0; } }
 
+/*=fix=*/
+@media (max-width: 410px) {
+  .mobile-menu__link-drop:after {
+    bottom: -10px; }
+  .mobile-menu__nav li {
+    padding: 10px 0; }
+  .mobile-menu__social {
+    margin-top: 15px; } }
+
+/*=/fix=*/
 @media (max-width: 360px) {
   .header__title {
     font-size: 11px; }
@@ -1040,11 +1082,6 @@
       font-size: 7.74px; } }
 
 /*========/adaptive==========*/
-@media (max-width: 992px) {
-  .page .header {
-    -webkit-box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1);
-    box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1); } }
-
 .page_service-consult .services-box .title {
   max-width: 545px; }
 
@@ -2913,10 +2950,6 @@
     left: 48px; } }
 
 @media (max-width: 1200px) {
-  .page_gray-foot .footer__info {
-    background-color: #F9F9F9; }
-    .page_gray-foot .footer__info:before {
-      background-color: #F9F9F9; }
   .address-logo {
     right: 15%; }
   .address-card {
@@ -3056,8 +3089,9 @@
     margin-bottom: 0; } }
 
 @media (max-width: 860px) {
-  .page_service-labor .services-box__nav {
-    display: none; }
+  .services-box__nav.mobile-none {
+    display: none;
+    /*fix*/ }
   .block-p {
     padding: 70px 0; }
   .contact-page__item span.contact-page__item-line {
@@ -3960,11 +3994,19 @@
   width: 250px;
   top: calc(100% - 4px);
   left: 0;
-  z-index: 10;
+  z-index: 50;
   background-color: #fff;
   border-top: 4px solid #BF9D77;
   -webkit-box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1);
   box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1); }
+  .nav-dropdown:before {
+    content: "";
+    width: 100%;
+    height: 60px;
+    position: absolute;
+    top: -60px;
+    left: 0;
+    z-index: 1; }
   .nav-dropdown__inner {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -4086,14 +4128,17 @@
 
 .mobile-menu-top {
   background-color: #fff;
-  padding: 20px 40px 20px; }
+  padding: 20px 40px 0px; }
 
 .mobile-menu-bottom {
   background-color: #F9F9F9;
-  padding: 20px 40px 20px; }
+  padding: 0px 40px 0px; }
 
 .mobile-menu__contact {
   background-color: #fff; }
+
+.mobile-menu .header-contact__item br {
+  display: none; }
 
 .mobile-menu .header-lang {
   background: rgba(191, 157, 119, 0.2); }
@@ -4469,7 +4514,17 @@
 .view-btn {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .view-btn__description {
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.3;
+    margin-right: 15px; }
   .view-btn a {
     width: 40px;
     height: 40px;
@@ -4505,47 +4560,20 @@
 /*===========Adaptive============*/
 @media (max-width: 1200px) {
   .work__inner {
-    display: block;
-    margin-left: 0; }
+    margin-left: -20;
+    margin-bottom: -40px;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
     .work__inner > * {
-      margin-left: 0; }
-  .work__icon {
-    margin-bottom: 0;
-    margin-right: 30px; }
-    .work__icon img {
-      width: 50px;
-      height: 50px; }
+      margin-left: 20px; }
   .work__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    width: 100%;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    width: calc(25% - 20px);
     min-width: auto;
     max-width: 100%;
-    margin-bottom: 20px; }
-    .work__item:last-child {
-      margin-bottom: 0; }
-    .work__item:first-child .work__info:before {
-      background: url("../images/icons/work-arrow-down_first.svg") left top no-repeat;
-      background-size: contain; }
-    .work__item:last-child .work__info:before {
-      background: url("../images/icons/work-arrow-down_last.svg") left top no-repeat;
-      background-size: contain; }
-  .work__info {
-    padding-top: 0;
-    padding-left: 30px; }
-    .work__info:before {
-      width: 10px;
-      height: 50px;
-      background: url("../images/icons/work-arrow-down.svg") left top no-repeat;
-      background-size: contain;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%); }
+    margin-bottom: 40px; }
   .delivery__map {
     width: 120%; }
   .delivery__inner {
@@ -4587,6 +4615,50 @@
     display: none; } }
 
 @media (max-width: 768px) {
+  .work__inner {
+    display: block;
+    margin-left: 0;
+    margin-bottom: 0; }
+    .work__inner > * {
+      margin-left: 0; }
+  .work__icon {
+    margin-bottom: 0;
+    margin-right: 30px; }
+    .work__icon img {
+      width: 50px;
+      height: 50px; }
+  .work__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 100%;
+    min-width: auto;
+    max-width: 100%;
+    margin-bottom: 20px; }
+    .work__item:last-child {
+      margin-bottom: 0; }
+    .work__item:first-child .work__info:before {
+      background: url("../images/icons/work-arrow-down_first.svg") left top no-repeat;
+      background-size: contain; }
+    .work__item:last-child .work__info:before {
+      background: url("../images/icons/work-arrow-down_last.svg") left top no-repeat;
+      background-size: contain; }
+  .work__info {
+    font-size: 20px;
+    padding-top: 0;
+    padding-left: 30px; }
+    .work__info:before {
+      width: 10px;
+      height: 50px;
+      background: url("../images/icons/work-arrow-down.svg") left top no-repeat;
+      background-size: contain;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%); }
   .delivery__map {
     -webkit-transform: translate(-50%, -10%);
     -ms-transform: translate(-50%, -10%);
@@ -4624,6 +4696,20 @@
 @media (max-width: 546px) {
   .p-block {
     padding: 40px 0; }
+  .view-btn {
+    position: relative; }
+    .view-btn__description {
+      font-size: 12px;
+      margin-right: 0;
+      position: absolute;
+      top: -3px;
+      left: 0;
+      z-index: 1;
+      -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
+      transform: translateY(-100%); }
+  .work__info {
+    font-size: 16px; }
   .header-logo__title {
     font-size: 16.5px; }
     .header-logo__title span:first-child {
@@ -4665,7 +4751,9 @@
 
 @media (max-width: 375px) {
   .manufacture .title {
-    font-size: 24px; } }
+    font-size: 24px; }
+  .mobile-menu .header-contact__item br {
+    display: block; } }
 
 @media (max-width: 360px) {
   .manufacture-filter {
@@ -4935,6 +5023,8 @@ body.hidden {
 
 /*=======Intro=======*/
 .intro {
+  display: none;
+  /*fix*/
   position: relative;
   background: url("../images/intro-bg.png") center no-repeat;
   background-size: cover;
@@ -5591,7 +5681,8 @@ body.hidden {
       .intro .slick-dots button {
         width: 25px; }
   .product {
-    padding: 40px  0 50px; }
+    padding: 30px  0 50px;
+    /*fix*/ }
     .product__inner {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
