--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -558,7 +558,7 @@
         border-bottom: none; }
   .mobile-menu__contact {
     background-color: #F9F9F9;
-    padding: 20px 40px 130px;
+    padding: 20px 40px 150px;
     /*fix*/ }
     .mobile-menu__contact .header-contact__item {
       margin-bottom: 10px; }
@@ -1063,8 +1063,6 @@
 
 /*=fix=*/
 @media (max-width: 410px) {
-  .mobile-menu__link-drop:after {
-    bottom: -10px; }
   .mobile-menu__nav li {
     padding: 10px 0; }
   .mobile-menu__social {
@@ -4748,6 +4746,10 @@
       order: 1; }
     .manufacture-box__title {
       font-size: 12px; } }
+
+@media (max-width: 410px) {
+  .mobile-menu__link-drop:after {
+    bottom: -10px; } }
 
 @media (max-width: 375px) {
   .manufacture .title {
