--- a/assets/css/style-new.scss
+++ b/assets/css/style-new.scss
@@ -715,6 +715,58 @@
 }
 /*===========/view-btn===========*/
 
+/*==========Download-btn==========*/
+.download-btn {
+	background-color: #FBF7F1;
+	display: inline-flex;
+	align-items: center;
+	position: relative;
+	&:after {
+		content: "";
+		width: 100%;
+		height: 2px;
+		background-color: $red;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		z-index: 1;
+		transition: all .2s linear;
+		opacity: 0;
+	}
+	&:hover {
+		&:after {
+			opacity: 1;
+		}
+		.download-btn__name {
+			color: $red;
+		}
+	}
+	&__name {
+		padding: 5px 34px;
+		font-family: $ff;
+		font-size: 16px;
+		font-weight: 400;
+		color: $bl;
+		line-height: 1.3;
+		transition: all .2s linear;
+	}
+}
+
+.download-btns {
+	margin-bottom: 20px;
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -20px;
+	>* {
+		margin-left: 20px;
+		margin-bottom: 20px;
+	}
+	&:last-child {
+		margin-bottom: -20px;
+	}
+}
+/*==========/download-btn==========*/
+
 /*===========Adaptive============*/
 @media(max-width: 1200px) {
 	.work {
@@ -891,6 +943,19 @@
 }
 
 @media(max-width: 765px) {
+	.download-btn {
+		width: 100%;
+		&__name {
+			flex: 1 1 auto;
+			padding: 5px 24px;
+			text-align: center;
+		}
+	}
+
+	.download-btns {
+		margin-bottom: 10px;
+	}
+
 	.delivery {
 		&__inner {
 			display: block;
