--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4555,6 +4555,59 @@
         fill: #fff; }
 
 /*===========/view-btn===========*/
+/*==========Download-btn==========*/
+.download-btn {
+  background-color: #FBF7F1;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: relative; }
+  .download-btn:after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #983031;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+    opacity: 0; }
+  .download-btn:hover:after {
+    opacity: 1; }
+  .download-btn:hover .download-btn__name {
+    color: #983031; }
+  .download-btn__name {
+    padding: 5px 34px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.3;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear; }
+
+.download-btns {
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-left: -20px; }
+  .download-btns > * {
+    margin-left: 20px;
+    margin-bottom: 20px; }
+  .download-btns:last-child {
+    margin-bottom: -20px; }
+
+/*==========/download-btn==========*/
 /*===========Adaptive============*/
 @media (max-width: 1200px) {
   .work__inner {
@@ -4678,6 +4731,16 @@
         order: 1; } }
 
 @media (max-width: 765px) {
+  .download-btn {
+    width: 100%; }
+    .download-btn__name {
+      -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+      flex: 1 1 auto;
+      padding: 5px 24px;
+      text-align: center; }
+  .download-btns {
+    margin-bottom: 10px; }
   .delivery__inner {
     display: block;
     margin-left: 0; }
