--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,7 @@
 @import 'photogallery.scss';
 @import 'production.scss';
 @import 'style-new.scss';
+@import 'product_card.scss';
 
 /*Reset
 ===============*/
