--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,8 @@
 @import 'production.scss';
 @import 'style-new.scss';
 @import 'product_card.scss';
+@import 'tags.scss';
+@import 'style-text.scss';
 
 /*Reset
 ===============*/
